--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@
     .menu-branding .portrait {
       width: 205px;
       height: 205px;
-      background: url("https://media.licdn.com/dms/image/C5603AQEKqRCikabtRQ/profile-displayphoto-shrink_200_200/0?e=1582156800&v=beta&t=SYIPI-9BOxWoB5n7egwOq61ldr677osgQcTtPLv95Nw");
+      background: url("https://media-exp1.licdn.com/dms/image/C5603AQEKqRCikabtRQ/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=FtmASGz9cKSs54jVAnETNKEND2ElFnYo3KQnTZnWwA4");
       background-position: center;
       border-radius: 15%;
       border: solid 3px #008753; }
